# rust_midi_mapper

./: Cargo.toml  README.md  test_midi_functions.json  test_midi_functions_with_elements_ids.json  test_midi_functions_with_midi_advanced_messages.json
src/: controll_element.rs  jackmidi.rs  jackprocess.rs  lib.rs  midi_egui_elements.rs  midi_function.rs  util.rs
src/midi_debugger/: main.rs  midi_debugger_gui.rs
src/midi_elements_gui/: main.rs  midi_elements_gui.rs
