[package]
name = "rust_midi_mapper"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "midi_mapper"
path = "src/lib.rs"

[[bin]]
name = "midi_debugger_gui"
path = "src/midi_debugger/main.rs"

[dependencies]
jack = "0.11.4"
wmidi = "4.0.8"
crossbeam-channel = "0.5.8"
eframe = { version = "0.23.0"}
